# libs/api-reminders/openapi/reminders.yml
@@ -116,6 +116,40 @@ paths:
           $ref: '#/components/responses/NotFound'
         "500":
           $ref: '#/components/responses/ServerError'
+  /pets/{petId}/{reminderId}:
+    delete:
+      summary: Delete reminder
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: petId
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: reminderId
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Reminder deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        "401":
+          $ref: '#/components/responses/Unauthorized'
+        "404":
+          $ref: '#/components/responses/NotFound'
+        "500":
+          $ref: '#/components/responses/ServerError'
 components:
   securitySchemes:
     bearerAuth:
@@ -129,6 +163,8 @@ components:
         reminderId:
           type: string
         petId:
+          type: string
+        ownerId:
           type: string
         eventId:
           type: string
